--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,14 @@
-add_library(pico-1wire-lib INTERFACE)
+add_library(pico_1wire_lib INTERFACE)
 
-target_include_directories(pico-1wire-lib INTERFACE
-  ${CMAKE_CURRENT_LIST_DIR}/include
+target_include_directories(pico_1wire_lib INTERFACE
+ ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
-target_sources(pico-1wire-lib INTERFACE
+target_link_libraries(pico_1wire_lib INTERFACE
+  hardware_gpio
+)
+
+target_sources(pico_1wire_lib INTERFACE
   ${CMAKE_CURRENT_LIST_DIR}/src/pico_1wire.c
 )
 
-target_link_libraries(pico-1wire-lib INTERFACE
-  hardware_gpio
-)
